1.修复删除密码查询模块删除行导致的名称占用的问题