@@ -2,13 +2,15 @@ package devilSpiderX.server.webServer.module.query.service.impl;
 
 import devilSpiderX.server.webServer.core.util.MyCipher;
 import devilSpiderX.server.webServer.module.query.entity.MyPasswords;
+import devilSpiderX.server.webServer.module.query.entity.MyPasswordsDeleted;
 import devilSpiderX.server.webServer.module.query.record.MyPasswordsResp;
 import devilSpiderX.server.webServer.module.query.service.MyPasswordsService;
 import devilSpiderX.server.webServer.module.user.service.UserService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.teasoft.bee.osql.IncludeType;
 import org.teasoft.bee.osql.Op;
-import org.teasoft.bee.osql.api.Condition;
 import org.teasoft.bee.osql.api.SuidRich;
 import org.teasoft.honey.osql.core.BeeFactoryHelper;
 import org.teasoft.honey.osql.core.ConditionImpl;
@@ -17,6 +19,7 @@ import java.util.*;
 
 @Service
 public class MyPasswordsServiceImpl implements MyPasswordsService {
+    private static final Logger logger = LoggerFactory.getLogger(MyPasswordsServiceImpl.class);
     private final SuidRich suid = BeeFactoryHelper.getSuidRich();
     private final UserService userService;
 
@@ -26,7 +29,7 @@ public class MyPasswordsServiceImpl implements MyPasswordsService {
 
     @Override
     public boolean add(String name, String account, String password, String remark, String owner) {
-        if (name == null || name.equals("")) {
+        if (name == null || name.isEmpty()) {
             return false;
         }
         if (!userService.exist(owner)) {
@@ -36,34 +39,45 @@ public class MyPasswordsServiceImpl implements MyPasswordsService {
         myPwd.setName(name);
         myPwd.setOwner(owner);
         if (suid.count(myPwd) > 0) {
+            logger.error("my_password表中已存在name为{}的行", name);
             return false;
         }
         myPwd.setAccount(account);
         myPwd.setPassword(MyCipher.encrypt(password));
         myPwd.setRemark(remark);
-        myPwd.setDeleted(false);
         return suid.insert(myPwd, IncludeType.INCLUDE_EMPTY) == 1;
     }
 
     @Override
     public boolean delete(int id) {
-        MyPasswords deletingPwd = new MyPasswords();
-        deletingPwd.setId(id);
-        deletingPwd.setDeleted(true);
-        return suid.updateById(deletingPwd, new ConditionImpl().setIncludeType(IncludeType.EXCLUDE_BOTH)) == 1;
+        final MyPasswordsDeleted deletedEntity = new MyPasswordsDeleted(
+                suid.selectById(MyPasswords.class, id)
+        );
+
+        int flag = 0;
+        flag += suid.insert(deletedEntity);
+        if (flag != 1) {
+            logger.error("my_password_deleted表插入失败,id:{}", id);
+            return false;
+        }
+
+        flag += suid.deleteById(MyPasswords.class, id);
+        if (flag != 2) logger.error("my_password表删除失败,id:{}", id);
+        return flag == 2;
     }
 
     @Override
     public boolean update(int id, String name, String account, String password, String remark) {
-        if ("".equals(name)) {
+        if (name == null || name.isEmpty()) {
             return false;
         }
-        MyPasswords oldMyPwd = suid.selectById(MyPasswords.class, id);
+        final var oldMyPwd = suid.selectById(MyPasswords.class, id);
 
-        MyPasswords myPwd = new MyPasswords();
+        final MyPasswords myPwd = new MyPasswords();
         myPwd.setName(name);
         myPwd.setOwner(oldMyPwd.getOwner());
         if (!oldMyPwd.getName().equals(name) && suid.count(myPwd) > 0) {
+            logger.error("my_password表中已存在name为{}的行", name);
             return false;
         }
         myPwd.setId(id);
@@ -91,12 +105,12 @@ public class MyPasswordsServiceImpl implements MyPasswordsService {
     }
 
     private boolean isEmptyNames(List<String> names) {
-        return names == null || names.isEmpty() || (names.size() == 1 && names.get(0).equals(""));
+        return names == null || names.isEmpty() || (names.size() == 1 && names.getFirst().isEmpty());
     }
 
     private List<MyPasswordsResp> _query(List<String> names, String owner) {
         List<MyPasswords> passwords;
-        MyPasswords emptyMP = new MyPasswords();
+        final var emptyMP = new MyPasswords();
         if (isEmptyNames(names)) {
             emptyMP.setOwner(owner);
             passwords = suid.select(emptyMP);
@@ -104,7 +118,7 @@ public class MyPasswordsServiceImpl implements MyPasswordsService {
             final Set<String> nameSet = new HashSet<>(names);
             final List<String> nameList = nameSet.stream().filter(name -> !Objects.equals(name, "")).toList();
 
-            Condition con = new ConditionImpl();
+            final var con = new ConditionImpl();
             con.lParentheses();
             for (int i = 0; i < nameList.size(); i++) {
                 final String name = nameList.get(i);
@@ -116,10 +130,8 @@ public class MyPasswordsServiceImpl implements MyPasswordsService {
         }
         passwords.sort(Comparator.naturalOrder());
 
-        passwords = passwords.stream().filter(password -> !password.getDeleted()).toList();
-
-        List<MyPasswordsResp> result = new ArrayList<>();
-        for (MyPasswords password : passwords) {
+        final List<MyPasswordsResp> result = new ArrayList<>();
+        for (var password : passwords) {
             result.add(new MyPasswordsResp(
                     password.getId(),
                     password.getName(),
